# chameleon-cache

./: .gitignore  LICENSE  README.md  REDDIT_RESPONSE.md  REDDIT_RESPONSE_CAFFEINEQUANT.md  REPORT.md  SKIP_DECAY_FINDINGS.md  SOCIAL_POSTS.md  STRESS_TEST_ANALYSIS.md  TWITTER_THREAD.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: bench.py  caffeine_stress.py  final_experiment.py  hill_climber_test.py  systematic_analysis.py  systematic_exploration.py  tune_threshold.py  verify_combined.py  verify_no_overfit.py  visualize_stress.py
chameleon/: __init__.py  core.py
tests/: test_basic.py  test_scenarios.py
