[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chameleon-cache"
version = "1.0.0"
description = "A variance-adaptive cache replacement policy that beats TinyLFU"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Dimitris Mitsos", email = "dimitriosmitsos@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cache", "caching", "lru", "tinylfu", "adaptive", "algorithm"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Cranot/chameleon-cache"
Repository = "https://github.com/Cranot/chameleon-cache"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
